--- a/version-2/styles/Home.module.css
+++ b/version-2/styles/Home.module.css
@@ -57,7 +57,7 @@
 }
 
 .code {
-  background: #fafafa;
+  background: black;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
@@ -104,7 +104,7 @@
 }
 
 .logo {
-  height: 1em;
+  height: 20px;
   margin-left: 0.5rem;
 }
 
